EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------

==11/05/2008
Derision: Dyed armor color should now show up correctly to other players.
Derision: Implemented the Potion Belt.

==11/03/2008
seveianrex: Added some scaling to the way NPC hitboxes are calculated. This corrects some of the issues with mobs like Wurms/Dragons who you could hit from miles away.
seveianrex: NPCs who are 5% HP or lower, are fleeing, and have a decent snare on will no longer cover so much distance.
seveianrex: Implemented Mob::GetSnaredAmount() function, utilized in the above. Returns the ABS() value of the snare.

==11/01/2008
seveianrex: GoD AA Implementations: [CLR] Touch of the Divine, [BRD] Internal Metronome, [SHD] Improved Consumption of the Soul
Derision: Allow backtick through the CleanName filter.
Derision: Pickpocket should no longer occasionally bug the UI.
Derision: Pickpocketing money should no longer show twice the amount taken in the client.
Derision: Looting stackable PVPItem now works.
Derision: Client now updates correctly when a charge on an item with a right click effect is used. Update your patch_Titanium.conf

==10/31/2008
seveianrex: Monk updates: Strikethrough AA, Mend Worsen Frequency Tweak, Kick Mastery AA Fix
seveianrex: Implemented Pet Flurries for MAG/BST/NEC
Derision: Extended quest::popup to take optional PopupID and buttontype (OK or YES/NO) fields.

==10/30/2008
KLS: Spell crits should work reasonably well once again.
Derision: Fixed inability to jump introduced in Rev161.

==10/29/2008
Derision: Mobs in water should no longer sink to the bottom.
cavedude00: Added rule to enable DeathExpLossMultiplier, or to use server code default.

Optional SQL:
Insert into rule_values values (0, 'Character:UseDeathExpLossMult', 'true');

==10/27/2008
seveianrex: Added server-side code for WAR sturdiness AA
Angelox: (Cbodmer) Experience loss based on cbodmers formula with added rule to regulate loss amount