@@ -268,6 +268,7 @@ void command_rules(Client *c, const Seperator *sep);
 void command_task(Client *c, const Seperator *sep);
 void command_altactivate(Client *c, const Seperator *sep);
 void command_refundaa(Client *c, const Seperator *sep);
+void command_melody(Client *c, const Seperator *sep);
 
 #ifdef EQBOTS
 
