@@ -1414,6 +1414,15 @@ bool Mob::SpellFinished(int16 spell_id, Mob *spell_target, int16 slot, int16 man
 		}
 	}
 	
+	if (IsClient() && CastToClient()->MelodyIsActive()) {
+		Client *c = CastToClient();
+		if (IsBardSong(spell_id)) {
+			// move the pointer to the next song!
+			c->Message(0, "Advancing Melody Pointer");
+			c->MelodyAdvanceSong();
+		}
+	}
+
 	//
 	// solar: Switch #2 - execute the spell
 	//
@@ -4110,6 +4119,70 @@ bool Mob::RemoveProcFromWeapon(int16 spell_id, bool bAll) {
 			SpellProcs[i].chance = 0;
 			SpellProcs[i].pTimer = NULL;
 			mlog(SPELLS__PROCS, "Removed proc %d from slot %d", spell_id, i);
+		}
+	}
+    return true;
+}
+
+bool Mob::AddDefensiveProc(int16 spell_id, int8 iChance)
+{
+	if(spell_id == SPELL_UNKNOWN)
+		return(false);
+	
+	int i;
+	for (i = 0; i < MAX_PROCS; i++) {
+		if (DefensiveProcs[i].spellID == SPELL_UNKNOWN) {
+			DefensiveProcs[i].spellID = spell_id;
+			DefensiveProcs[i].chance = iChance;
+			DefensiveProcs[i].pTimer = NULL;
+			mlog(SPELLS__PROCS, "Added spell-granted defensive proc spell %d with chance %d to slot %d", spell_id, iChance, i);
+			return true;
+		}
+	}
+
+    return false;
+}
+
+bool Mob::RemoveDefensiveProc(int16 spell_id, bool bAll)
+{
+	for (int i = 0; i < MAX_PROCS; i++) {
+		if (bAll || DefensiveProcs[i].spellID == spell_id) {
+			DefensiveProcs[i].spellID = SPELL_UNKNOWN;
+			DefensiveProcs[i].chance = 0;
+			DefensiveProcs[i].pTimer = NULL;
+			mlog(SPELLS__PROCS, "Removed defensive proc %d from slot %d", spell_id, i);
+		}
+	}
+    return true;
+}
+
+bool Mob::AddRangedProc(int16 spell_id, int8 iChance)
+{
+	if(spell_id == SPELL_UNKNOWN)
+		return(false);
+	
+	int i;
+	for (i = 0; i < MAX_PROCS; i++) {
+		if (RangedProcs[i].spellID == SPELL_UNKNOWN) {
+			RangedProcs[i].spellID = spell_id;
+			RangedProcs[i].chance = iChance;
+			RangedProcs[i].pTimer = NULL;
+			mlog(SPELLS__PROCS, "Added spell-granted ranged proc spell %d with chance %d to slot %d", spell_id, iChance, i);
+			return true;
+		}
+	}
+
+    return false;
+}
+
+bool Mob::RemoveRangedProc(int16 spell_id, bool bAll)
+{
+	for (int i = 0; i < MAX_PROCS; i++) {
+		if (bAll || RangedProcs[i].spellID == spell_id) {
+			RangedProcs[i].spellID = SPELL_UNKNOWN;
+			RangedProcs[i].chance = 0;
+			RangedProcs[i].pTimer = NULL;
+			mlog(SPELLS__PROCS, "Removed ranged proc %d from slot %d", spell_id, i);
 		}
 	}
     return true;
